# scp4

./: CMakeLists.txt  Concurrent_Standard_MultMat.c  Concurrent_Standard_MultMat.h  Concurrent_Strassens_MultMat.c  Concurrent_Strassens_MultMat.h  Matrix.c  Matrix.h  MultMatConcurrent_test.c  MultMat_Concurrent.c  MultMat_Sec.c  MultMat_Test.c  README.md
Results/: MatrixResult_128x128.txt  MatrixResult_16x16.txt  MatrixResult_4x4.txt  MatrixResult_512x512.txt  MatrixResult_64x64.txt
Test/: MatrixRes_128x128.txt.str  MatrixRes_512x512.txt.str  MatrixRes_64x64.txt.str
